# TAOS-CI

./: CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  Doxyfile.ci  Doxyfile.src  INDEX.md  LICENSE  README.md  index.md  pr
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
Documentation/: audri-hard-copy-ci-generate.sh  audri-hard-copy-ros-generate.sh  coding-convention.md  doxygen-documentation.md  how-to-build.md  how-to-install-from-infra.md  how-to-unit-test.md  how-to-upgrade.md  unit-testing.md
UnittestCoverageAssessment/: unittestcoverage.py
ci/: Doxyfile  Doxyfile.prj
ci/badge/: .htaccess  README.md  gen_badge.py
ci/cron/: coverity-github.sh
ci/doc/: book-hard-copy-ci-generate.sh  book-hard-copy-cover1.odt  book-hard-copy-date.txt  book-hard-copy-prj-generate.sh  coding-convention.md  contributing.md  doxygen-documentation.md  how-to-archive-large-data.md  how-to-build-gbs-pdebuild.md  how-to-build.md  how-to-good-commit-message.md  how-to-install-from-infra.md  how-to-install-taos-ci.md  how-to-install-tool-on-ubuntu.md  how-to-install.md  how-to-setup-taos-ci-server.md  how-to-unit-testing.md  how-to-use-ci-module.md  how-to-use-lcov-to-generate-code-coverage-stat.md  how-to-use-taos-ci-module.md  maintenance.md  self-assessment-before-submitting-pr.md
ci/doxybook/: book-doxygen-publish.sh
ci/gcov/: coverage-generator.sh  coverage_generator.sh  unittestcoverage.py
ci/gcov_html/: index.html
ci/jenkins/: README.md  dmesg-oom.sh  format-checker.sh  (+11 more)
debian/: changelog  control  copyright
doc/: book-hard-copy-ci-generate.sh  book-hard-copy-prj-generate.sh  coding-convention.md  contributing.md  doxygen-documentation.md  how-to-unit-test.md  how-to-unit-testing.md  how-to-upgrade-with-image.md  how-to-upgrade-with-zypper.md
packaging/: .gbs.conf  howto-build-package-with-gbs.md  taos-ci.spec  tizen.unified.conf
(+162 files in other folders)
